--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Adding config.py file.
+config.py
+
+# Adding additional files.
+API_practice.ipynb
+random_numbers.ipynb
+Untitled.ipynb
+"Traversing JSONs.ipynb"
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
